Add layout and styles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,58 @@
     />
     <title>Nancy Rojas</title>
   </head>
-  <body>
-    <h1>Card Web</h1>
+  <body class="d-flex justify-content-center flex-column align-items-center">
+    <div class="container mt-5 d-flex justify-content-center">
+      <div class="card border-0">
+        <img
+          src="./assets/img-fondo.png"
+          class="card-img-top"
+          alt="Imagen superior de fondo"
+        />
+        <div class="circle-img">
+          <img
+            src="./assets/img-perfil.jpeg"
+            alt="foto de perfil"
+            class="img-perfil"
+          />
+        </div>
+        <div class="card-body text-center">
+          <h4 class="card-title mb-4">Nancy Clarisa Rojas</h4>
+          <h6 class="card-subtitle mb-4 text-muted">
+            👩🏻‍💻 Desarrolladora Frontend 🐝 QA en formación
+          </h6>
+          <p class="card-text">
+            <small class="text-body-secondary"
+              >¡Hola a todos! En diciembre de 2022 finalicé mis estudios en el
+              curso Full Stack Python en
+              <span class="fw-bold">Codo a Codo</span> y en mayo de 2023 egresé
+              en la carrera de desarrollo web Frontend cursada en
+              <span class="fw-bold">Ada ITW</span>. En este momento me encuentro
+              realizando el curso de especialización en
+              <span class="fw-bold">React</span> y un curso de
+              <span class="fw-bold">QA Testing</span>. Estoy emocionada por
+              continuar aprendiendo y desarrollando mis habilidades!
+            </small>
+          </p>
+          <div class="icons">
+            <a
+              href="https://github.com/nancycrojas"
+              target="_blank"
+              class="btn btn-light mx-2"
+              ><i class="fa-brands fa-github btn-dark"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/nancy-clarisa-rojas"
+              target="_blank"
+              class="btn btn-light mx-2"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-footer text-center mt-3 text-light">
+      Práctica inicial CAC 2023
+    </div>
   </body>
 </html>
